hard-gists/5748e199a3bec164a867c9b654e5ffe5/run.log
=== Docker Run Log for 5748e199a3bec164a867c9b654e5ffe5 ===
Started at: Mi 29. Okt 15:56:23 CET 2025

[2025-10-29 15:56:23] START: Running container for 5748e199a3bec164a867c9b654e5ffe5
[2025-10-29 15:56:24] SUCCESS: Container 286f139b7c52483151a3254d91197b6b3dfe33d3488691c25cf502bf104361ff started for 5748e199a3bec164a867c9b654e5ffe5
=== Container logs for 5748e199a3bec164a867c9b654e5ffe5 ===
  File "/snippet.py", line 161
    print "iteration %i. mean f: %8.3g. max f: %8.3g"%(itr, np.mean(rewards), np.max(rewards))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5748e199a3bec164a867c9b654e5ffe5 ===
[2025-10-29 15:56:26] INFO: Container 286f139b7c52483151a3254d91197b6b3dfe33d3488691c25cf502bf104361ff has stopped
